# onepiece

./: .gitignore  .pre-commit-config.yaml  .pre_commit_config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yaml
apps/onepiece/: __main__.py  app.py  ingest.py
apps/onepiece/aws/: ingest.py  sync_from.py  sync_to.py
apps/onepiece/dcc/: open_shot.py  publish.py
apps/onepiece/misc/: greet.py  info.py
apps/onepiece/shotgrid/: flow_setup.py  upload_version.py  version_zero.py
apps/onepiece/utils/: errors.py
apps/onepiece/validate/: names.py  names_batch.py  paths.py
apps/tester/: __init__.py  app.py
docs/: cli_examples.md  cli_walkthroughs.md  configuration_profiles.md  dashboard_api.md  developer_guide.md  ftrack.md  maya_character_selector.md  perona_dashboard.md  render_api.md  trafalgar-authentication.md
docs/examples/: delivery_manifest.json  ingest_manifest.csv  publish_metadata.csv  render_sse_recorder.py  shotgrid_hierarchy.csv  trafalgar_event_streams.md  trafalgar_render_metrics.json
libraries/aws/: s3_sync.py  s5_sync.py
libraries/dccs/dcc_client/: dcc_client.py
libraries/dccs/maya/: __init__.py  maya.py
libraries/dccs/nuke/: __init__.py  nuke.py
libraries/handlers/: filepath_handler.py  protocols.py
libraries/media/: __init__.py  manipulations.py  transformations.py
libraries/shotgrid/: api.py  config.py  flow_setup.py  models.py
libraries/validations/: asset_consistency.py  csv_validations.py  dcc_validations.py  file_validations.py  naming_batch.py  naming_conventions.py
onepiece/dcc/: __init__.py  dcc_client.py
onepiece/devtools/: ruff_shim.py
onepiece/ingest/: __init__.py  service.py
onepiece/libraries/: __init__.py
onepiece/libraries/aws/: __init__.py  s3_sync.py  s5_sync.py
onepiece/libraries/dccs/: __init__.py
onepiece/libraries/handlers/: filepath_handler.py  protocols.py
onepiece/libraries/media/: manipulations.py  transformations.py
onepiece/libraries/shotgrid/: __init__.py  api.py  flow_setup.py  models.py
onepiece/libraries/validations/: __init__.py  asset_consistency.py  dcc_validations.py  file_validations.py
onepiece/shotgrid/: __init__.py  client.py  show_setup.py
onepiece/tests/: test_dcc_client.py  test_publish_cli.py  test_shotgrid_client.py  test_validations.py
onepiece/validations/: __init__.py  dcc.py  filesystem.py  naming.py
src/apps/: __init__.py
src/apps/chopper/: __init__.py  __main__.py  app.py  renderer.py  version.py
src/apps/onepiece/: __init__.py  __main__.py  app.py  config.py  ingest.py  reconcile.py
src/apps/perona/: __init__.py  __main__.py  app.py  defaults.toml  engine.py  models.py  version.py
src/apps/tester/: __init__.py  app.py
src/apps/trafalgar/: __init__.py  __main__.py  app.py  version.py
src/apps/uta/: __init__.py  __main__.py  app.py  version.py  web.py
src/libraries/: __init__.py
src/libraries/analytics/: __init__.py
src/libraries/automation/: __init__.py
src/libraries/aws/: __init__.py  s3_sync.py  s5_sync.py  scanner.py
src/libraries/creative/: __init__.py
src/libraries/dailies/: manifest.py
src/libraries/dcc/: __init__.py  client.py  dcc_client.py  enums.py
src/libraries/delivery/: __init__.py  manifest.py
src/libraries/filesystem/: __init__.py  scanner.py
src/libraries/ftrack/: client.py  models.py
src/libraries/handlers/: filepath_handler.py  protocols.py
src/libraries/ingest/: __init__.py  registry.py  service.py
src/libraries/integrations/: __init__.py
src/libraries/media/: __init__.py  manipulations.py  transformations.py
src/libraries/notify/: __init__.py  base.py  email.py  slack.py  utils.py
src/libraries/perona/: __init__.py
src/libraries/platform/: __init__.py
src/libraries/reconcile/: __init__.py  comparator.py  job.py  parsing.py  rules.py
src/libraries/render/: __init__.py  analytics.py  base.py  deadline.py  mock.py  models.py  opencue.py  optimization.py  tractor.py
src/libraries/review/: dailies.py
src/libraries/shotgrid/: __init__.py  api.py  client.py  config.py  flow_setup.py  models.py  playlist_delivery.py  show_setup.py
src/libraries/tests/: __init__.py  test_dcc_client.py  test_playlist_delivery.py  test_publish_cli.py  test_s5_sync.py  test_shotgrid_client.py  test_validations.py
src/libraries/trafalgar/: __init__.py
src/libraries/validations/: __init__.py  asset_consistency.py  dcc.py  naming_batch.py  naming_conventions.py
src/onepiece/: __init__.py  __main__.py
src/onepiece.egg-info/: PKG-INFO
src/onepiece/cli/: reconcile_cli.py
src/onepiece/dcc/: dcc_client.py
src/onepiece/devtools/: __init__.py
src/onepiece/render/: __init__.py  submit.py
src/onepiece/review/: __init__.py  dailies.py
src/tests/: conftest.py  security_patches.py  test_api.py  test_aws_sync_cli.py  test_chopper_cli.py  test_chopper_renderer.py  test_cli.py  test_cli_registration.py  test_dailies.py  test_dashboard.py  test_dashboard_status.py  test_dcc_animation_cli.py  test_dcc_client.py  test_dcc_common.py  test_dcc_scene_operations.py  test_dcc_utils.py  test_deliver.py  test_engine.py  test_event_streams.py  test_ftrack_client.py  test_info.py  test_ingest_api.py  test_ingest_cli.py  test_ingest_registry.py  test_ingest_service.py  test_manifest.py  test_manifest_ingest.py  test_maya_animation_debugger.py  test_maya_auto_rig_validator.py  test_maya_batch_exporter.py  test_maya_import_asset.py  test_maya_module.py  test_maya_playblast_tool.py  test_maya_unreal_export_checker.py  test_maya_unreal_importer.py  test_media_transformations.py  test_notify.py  test_onepiece_cli_exit_codes.py  test_open_shot_cli.py  test_perona_calculations.py  (+26 more)
src/trafalgar/: __init__.py
src/upath/: __init__.py
structlog/: __init__.py
tests/: test_dcc_client.py  test_ingest_service.py  test_maya_character_selector.py  test_maya_module.py  test_publish_cli.py  test_shotgrid_client.py  test_validations.py
tests/perona/: test_api.py  test_cli.py
typer/: __init__.py  testing.py
typings/typer/: __init__.pyi
(+224 files in other folders)
