[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece"
version = "0.2.0"
description = "Open-source pipeline CLI toolkit"
authors = [{name="Jack Shortiss", email="jdshortiss@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer>=0.10.0",
    "tqdm>=4.66.1",
    "structlog>=23.3.0",
    "av>=12.0"
]

[project.scripts]
onepiece = "src.apps.onepiece.__main__:main"

[tool.setuptools.packages.find]
include = ["onepiece", "onepiece.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black>=25.9.0",
    "isort>=5.12.0",
    "ruff>=0.5",
    "mypy>=1.4.0",
]

[tool.black]
line-length = 88

[tool.ruff]
lint.select = ["E", "F"]
lint.ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["typings"]

[[tool.mypy.overrides]]
module = "structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onepiece.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "onepiece.libraries.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "apps.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "UPath"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nuke"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-pymel.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
