[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece"
version = "1.0.0"
description = "Open-source pipeline CLI toolkit"
authors = [{name="Jack Shortiss", email="jdshortiss@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.19.2",
    "tqdm>=4.66.1",
    "structlog>=23.3.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "av>=12.0",
    "rich>=13.7.0",
    "click>=8.3.0",
    "uvicorn>=0.30.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black==24.8.0",
    "isort>=5.12.0",
    "ruff>=0.6.8",
    "mypy>=1.11.1",
]

[project.scripts]
onepiece = "apps.onepiece.__main__:main"
trafalgar = "apps.trafalgar.__main__:main"
uta = "apps.uta.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "apps.onepiece",
    "apps.onepiece.*",
    "apps.trafalgar", 
    "apps.trafalgar.*", 
    "apps.uta", 
    "apps.uta.*", 
    "libraries",
    "libraries.*",
]
exclude = []

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
packages = ["apps", "libraries", "tests"]

[[tool.mypy.overrides]]
module = "structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onepiece.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "onepiece.libraries.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "apps.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "UPath"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nuke"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-pymel.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
