[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onepiece"
version = "1.0.0"
description = "Open-source pipeline CLI toolkit"
authors = [{name="Jack Shortiss", email="jdshortiss@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "av>=12.0",
    "click>=8.3.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.3",
    "PyYAML>=6.0.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "structlog>=23.3.0",
    "typer>=0.19.2",
    "universal-pathlib>=0.2.2",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
"chopper-images" = [
    "Pillow>=10.4.0",
]
"chopper-anim" = [
    "Pillow>=10.4.0",
    "imageio>=2.35",
    "imageio-ffmpeg>=0.5.1",
]
dev = [
    "black==24.8.0",
    "httpx>=0.27.0",
    "isort>=5.12.0",
    "mypy==1.11.1",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff==0.6.8",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
]

[project.scripts]
onepiece = "apps.onepiece.__main__:main"
trafalgar = "apps.trafalgar.__main__:main"
uta = "apps.uta.__main__:main"
chopper = "apps.chopper.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "apps.onepiece",
    "apps.onepiece.*",
    "apps.trafalgar",
    "apps.trafalgar.*",
    "apps.chopper",
    "apps.chopper.*",
    "apps.uta",
    "apps.uta.*",
    "libraries",
    "libraries.*",
]
exclude = []

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["apps", "libraries", "tests"]

[[tool.mypy.overrides]]
module = "structlog"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onepiece.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "onepiece.libraries.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "apps.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "nuke"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mypy-pymel.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
