[metadata]
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
    typer>=0.10.0
    structlog>=23.3.0
    tqdm>=4.66.1
    av>=12.0
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    onepiece=apps.onepiece.__main__:main

[options.extras_require]
dev =
    pytest>=8.0.0
    pytest-mock>=3.12.0
    black>=23.9.0
    isort>=5.12.0
    ruff>=0.5
    mypy>=1.4.0

[options.packages.find]
where = src
include =
    apps.onepiece
    apps.onepiece.*
    libraries
    libraries.*
exclude =
    libraries.tests
    libraries.tests.*
