[metadata]
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
    av>=12.0
    click>=8.3.0
    rich>=13.7.0
    structlog>=23.3.0
    tqdm>=4.66.1
    typer>=0.19.2
python_requires = >=3.11
include_package_data = True

[options.entry_points]
console_scripts =
    onepiece=apps.onepiece.__main__:main
    trafalgar=apps.trafalgar.__main__:main

[options.extras_require]
dev =
    black==24.8.0
    isort>=5.12.0
    mypy>=1.11.1
    pytest>=8.0.0
    pytest-mock>=3.12.0
    ruff>=0.6.8

[options.packages.find]
where = src
include =
    apps.onepiece
    apps.onepiece.*
    apps.trafalgar
    apps.trafalgar.*
    libraries
    libraries.*
