[metadata]
license_files = LICENSE

[options]
package_dir =
    =src
packages = find:
install_requires =
    av>=12.0
    click>=8.3.0
    fastapi>=0.115.0
    pydantic>=2.8.0
    pydantic-settings>=2.3.3
    PyYAML>=6.0.0
    requests>=2.32.0
    rich>=13.7.0
    structlog>=23.3.0
    typer>=0.19.2
    universal-pathlib>=0.2.2
    uvicorn>=0.30.0
python_requires = >=3.12
include_package_data = True

[options.entry_points]
console_scripts =
    onepiece=apps.onepiece.__main__:main
    trafalgar=apps.trafalgar.__main__:main
    chopper=apps.chopper.__main__:main

[options.extras_require]
dev =
    black==24.8.0
    httpx>=0.27.0
    isort>=5.12.0
    mypy>=1.11.1
    pre-commit>=3.7.0
    pytest>=8.0.0
    pytest-mock>=3.12.0
    ruff>=0.6.8
    types-PyYAML>=6.0.0
    types-requests>=2.31.0

[options.packages.find]
where = src
include =
    apps.onepiece
    apps.onepiece.*
    apps.trafalgar
    apps.trafalgar.*
    apps.chopper
    apps.chopper.*
    libraries
    libraries.*
